--- a/Dottie/Dottie/Views/Shared/_MasterLayout.cshtml
+++ b/Dottie/Dottie/Views/Shared/_MasterLayout.cshtml
@@ -92,7 +92,9 @@
             </ul>
             <div class="left-nav">
                 <div class="icon-container">
-                    <i class="nav-icon ti-heart"></i>
+                    <a href="@Url.Action("yeuthich", "Home")" class="icon-link">
+                        <i class="nav-icon icon-heart ti-heart"></i>
+                    </a>
                     <span class="badge">0</span>
                 </div>
                 <div class="icon-container">
