--- a/Dottie/Dottie/Content/Css/MasterLayout.css
+++ b/Dottie/Dottie/Content/Css/MasterLayout.css
@@ -13,6 +13,7 @@ html {
 body {
 	display: flex;
 	flex-direction: column;
+	color: #252a2b;
 }
 
 
@@ -86,6 +87,10 @@ body {
 .nav-bar .logo-img {
 	width: 160px;
 	height: 45px;
+}
+
+.icon-heart {
+	color: #333;
 }
 
 .item-nav {
